Bug 863994 - Support transform attribute on <svg> elements. r=dholbert