content/svg/content/src/nsSVGAnimatedTransformList.h
@@ -56,6 +56,8 @@ public:
     return mBaseVal;
   }
 
+  nsresult SetBaseValue(const SVGTransformList& aValue);
+
   nsresult SetBaseValueString(const nsAString& aValue);
 
   void ClearBaseValue();
